Add Annotated Map and finalize Sankey Diagram

--- a/web/index.html
+++ b/web/index.html
@@ -137,7 +137,7 @@
 			<div class="col-sm-4 txt_content">
 				<h2>Number of Users by Hour of Day(Summary)</h2>
 				<h4>
-					We combine the figures from all station to investigate the overall trends. As we observed earlier, Monthly Pass riders start their commute as early as 6 AM. We also see a Multimodeal (three peaks) distribution in case of Monthly Pass riders; the number of usages peaked out around 8 AM, noon, and 6 PM. Check-out and Check-in statistics also follow closely. Conversely, the numbers of Flex Pass and Walk-up riders pick up at the later time of the day. We also see more activities come from Walk-up riders at, and around midnight.
+					We combine the figures from all station to investigate the overall trends. As we observed earlier, Monthly Pass riders start their commute as early as 6 AM. We also see a Multimodal (three peaks) distribution in case of Monthly Pass riders; the number of usages peaked out around 8 AM, noon, and 6 PM. Check-out and Check-in statistics also follow closely. Conversely, the numbers of Flex Pass and Walk-up riders pick up at the later time of the day. We also see more activities come from Walk-up riders at, and around midnight.
 				</h4>
 			</div>
 		</div>
@@ -205,12 +205,15 @@
     </div>
 	<div id="from_and_to" class="container">
 		<div class="row">
-			<div class="col-sm-9">
-				<iframe src="sankey.html" frameborder="0" width="960" height="1420"></iframe>
+			<div class="col-sm-8">
+				<iframe src="sankey.html" frameborder="0" width="860" height="1420"></iframe>
 			</div>
-			<div class="col-sm-3 txt_content">
+			<div class="col-sm-4 txt_content">
 				<h2>From & To</h2>
 				<h4>Our last visualization is a proportion of trips that come from, and go to each station. The station names is ordered by the number of check-outs(descending). Happy exploring :)</h4>
+				<center>
+					<div class='tableauPlaceholder' id='viz1483503798844' style='position: relative'><noscript><a href='#'><img alt='DB_Annotated_map ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LAMetroBikeSharek_DB_Annotated_map&#47;DB_Annotated_map&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='LAMetroBikeSharek_DB_Annotated_map&#47;DB_Annotated_map' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;LA&#47;LAMetroBikeSharek_DB_Annotated_map&#47;DB_Annotated_map&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1483503798844');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='404px';vizElement.style.height='569px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+				</center>
 			</div>
 		</div>
 	</div>
